--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script type="text/javascript" src="js/jquery.js">
     </script>
     <!-- <script type="text/javascript" src="js/app.js"> -->
-    <script type="text/javascript" src="js/second_version.js">
-    <!-- <script type="text/javascript" src="js/refactor_1.js"> -->
-    </script>
+    <!-- <script type="text/javascript" src="js/second_version.js"> -->
+    <script type="text/javascript" src="js/third_version.js">
+    // <script type="text/javascript" src="js/refactor_1.js"></script>
   </head>
   <body>
     <div class="container">
